@@ -58,7 +58,7 @@
                     <!-- <forkMode>once</forkMode> -->
                     <!-- set sun.zip.disableMemoryMapping property to avoid jvm crash when jar file modify in test case @link -> SpecialRoutingHandler#getRoutingYamlConfig -->
                     <!-- see jvm bug @ https://bugs.openjdk.org/browse/JDK-8190772   -->
-                    <argLine>-Xbootclasspath/p:./src/test/resources/lib/sandbox-spy-1.3.0-for-qatest.jar -Dsun.zip.disableMemoryMapping=true</argLine>
+                    <argLine>-Dsun.zip.disableMemoryMapping=true --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -73,20 +73,12 @@
         </dependency>
 
         <dependency>
-            <groupId>com.sun</groupId>
-            <artifactId>tools</artifactId>
-            <version>1.8</version>
-            <scope>system</scope>
-            <systemPath>${java.home}/../lib/tools.jar</systemPath>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
 
         <dependency>
@@ -133,17 +125,12 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
-            <version>8.1.2.v20120308</version>
+            <version>11.0.24</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlet</artifactId>
-            <version>8.1.2.v20120308</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-websocket</artifactId>
-            <version>8.1.2.v20120308</version>
+            <version>11.0.24</version>
         </dependency>
 
         <!-- asm -->
